Fixed background color overflow

--- a/frontend/src/routes/styles.css
+++ b/frontend/src/routes/styles.css
@@ -36,9 +36,7 @@
 }
 
 body {
-  min-height: 100vh;
   margin: 0;
-  background-attachment: fixed;
   background-color: var(--color-bg-1);
   background-size: 100vw 100vh;
   background-image: linear-gradient(
